# alpha-machine

./: .gitignore  CODEBASE_DEEP_DIVE.md  Makefile  README.md  config.example.env  configure_slack_app.py  docker-compose.yml  main.py  process_transcript_legacy.py  pyproject.toml  sfai_dev_standup_transcript.txt  slack_app_manifest.json  slack_bot.py  slack_setup_instructions.md  structured_project_view.py  supabase_schema.sql  test_integration_flow.py  test_linear_basic.py  test_linear_full_workflow.py  test_linear_results.json  test_linear_workflow.py  webhook_server.py
deploy/: README.md  cloud-run.yaml  deploy-all.sh  deploy-service.sh
docs/: architecture.md  coding_guidelines.md
scripts/: deploy.sh
services/linear/: Dockerfile  README.md  main.py  orchestrator.py  pyproject.toml
services/notion/: Dockerfile  README.md  main.py  processor.py  pyproject.toml
services/slackbot/: Dockerfile  README.md  __init__.py  command_handler.py  event_handler.py  main.py  pyproject.toml  webhook_handler.py
services/transcript/: Dockerfile  README.md  __init__.py  filter_service.py  main.py  processor.py  pyproject.toml  webhook_handler.py
shared/: __init__.py
shared/core/: __init__.py  config.py  models.py  prompts.yml  pyproject.toml
shared/services/: __init__.py  ai_service.py  linear_service.py  notion_service.py  pyproject.toml  slack_service.py  supabase_service.py
src/: __init__.py  app.py  config.py  orchestrator.py  prompts.yml  utils.py
src/core/: __init__.py  config.py  models.py  prompts.yml  utils.py
src/flows/: __init__.py
src/flows/linear_flow/: __init__.py  orchestrator.py
src/flows/notion_flow/: __init__.py  processor.py
src/flows/slack_flow/: __init__.py  ai_service.py  bot.py  chat_history.py  context_manager.py
src/flows/transcript_flow/: __init__.py  filter_service.py  processor.py  webhook_handler.py
src/services/: __init__.py  ai_service.py  linear_service.py  notion_service.py  openai_service.py  slack_service.py  supabase_service.py  transcript_service.py
tests/: test_slackbot_linear_integration.py  test_slackbot_local.py  test_transcript_linear_flow.py
tests/data/: sf_ai_-_fnrp_transcript.txt
